# advent-of-code

./: pyproject.toml
2024/day_1/: day1.ipynb
2024/day_2/: Day2.ipynb
2024/day_3/: Day3.ipynb
