[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = "AoC Attempts"
authors = ["Adhish Thite"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
